# mcp-hackathon

./: .gitignore  README.md  main.py  mcline_mcp_settings_example.json  pyproject.toml
src/: all_repos.json  commits.db  feature_engineer.ipynb  gather_commits.ipynb  gather_repo_list.ipynb  semantic_search.py  store_embeddings.ipynb
