[project]
name = "mcp-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pip>=25.2",
    "sentence-transformers>=5.1.0",
    "sqlite-vec>=0.1.6",
]
